--- a/k8s.yaml
+++ b/k8s.yaml
@@ -10,7 +10,7 @@ spec:
         app: jenkins-demo
     spec:
       containers:
-      - image: http://192.168.20.197:5000/jenkins-demo:<BUILD_TAG>
+      - image: 192.168.20.197:5000/jenkins-demo:<BUILD_TAG>
         imagePullPolicy: IfNotPresent
         name: jenkins-demo
         env:
